--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
-  - name: 🧑‍💻 ¿Buscás Grupo / Integrantes? ¡Posteá ACA!
-    url: https://github.com/sisoputnfrba/foro/issues/2011
-    about: Post de búsqueda de grupos o integrantes.
+  - name: 🚀🚀 Cambios de Grupo - Busca para completar tu tripulación 🚀🚀
+    url: https://github.com/sisoputnfrba/foro/issues/2069
+    about: En este thread van a poder buscar integrantes para completar su grupo o grupo en caso de haberse quedado solos.
