--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
-contact_links:
-  - name: Cambios de grupos? Encontrá un carpincho amigo en este issue!
-    url: https://github.com/sisoputnfrba/foro/issues/2320
-    about: Post de búsqueda de grupos o integrantes. 
+# contact_links:
+#  - name: Buscas Grupo / Integrantes? Postea ACA!
+#    url: https://github.com/sisoputnfrba/foro/issues/:id
+#    about: Post de búsqueda de grupos o integrantes. 
