--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
-# contact_links:
-#  - name: Buscas Grupo / Integrantes? Postea ACA!
-#    url: https://github.com/sisoputnfrba/foro/issues/:id
-#    about: Post de búsqueda de grupos o integrantes. 
+contact_links:
+ - name: Busco grupo o integrantes
+   url: https://faq.utnso.com.ar/issue-grupos
+   about: Posteá acá si te encontrás en búsqueda de grupo o integrantes para realizar el TP.
