--- a/.github/ISSUE_TEMPLATE/04-tengo-una-duda-sobre-el-enunciado.yml
+++ b/.github/ISSUE_TEMPLATE/04-tengo-una-duda-sobre-el-enunciado.yml
@@ -3,7 +3,7 @@ description: Usá este template si tenés una duda sobre una cita del enunciado 
 title: '[Enunciado]: '
 labels: ['enunciado-c :page_facing_up:', 'enunciado-go :page_facing_up:']
 projects: []
-assignees: ''
+assignees: []
 body:
   - type: dropdown
     id: language
