--- a/.github/ISSUE_TEMPLATE/06-necesito-ayuda-de-programacion-en-c.yml
+++ b/.github/ISSUE_TEMPLATE/06-necesito-ayuda-de-programacion-en-c.yml
@@ -1,6 +1,6 @@
 name: Necesito ayuda de programación en C
 description: Usá este template si necesitás ayuda con las commons, gcc, sockets, threads o C en general.
-title: '[C]: '
+title: ''
 labels: ['programacion-c', 'api-linux-threads-semaforos-etc']
 projects: []
 assignees: []
