--- a/.github/ISSUE_TEMPLATE/03-necesito-ayuda-para-resolver-el-tp0.yml
+++ b/.github/ISSUE_TEMPLATE/03-necesito-ayuda-para-resolver-el-tp0.yml
@@ -26,7 +26,7 @@ body:
     validations:
       required: false
   - type: textarea
-    id: docs
+    id: ideas
     attributes:
       label: 💭 Soluciones posibles
       description: |
