--- a/.github/ISSUE_TEMPLATE/04-tengo-una-duda-sobre-el-enunciado.yml
+++ b/.github/ISSUE_TEMPLATE/04-tengo-una-duda-sobre-el-enunciado.yml
@@ -7,7 +7,7 @@ body:
   - type: dropdown
     id: language
     attributes:
-      label: Lenguaje
+      label: 🛠️ Lenguaje
       options:
         - C
         - Go
@@ -17,7 +17,7 @@ body:
   - type: textarea
     id: description
     attributes:
-      label: Descripción
+      label: 🖋️ Descripción
       description: |
         Contanos cuál es el contexto de tu duda o problema.
         No olvides buscar primero en el buscador de issues por si la duda ya fue resuelta antes.
