--- a/.github/ISSUE_TEMPLATE/08-tengo-una-duda-sobre-las-pruebas.yml
+++ b/.github/ISSUE_TEMPLATE/08-tengo-una-duda-sobre-las-pruebas.yml
@@ -4,6 +4,16 @@ labels: ['pruebas :white_check_mark:']
 projects: []
 assignees: []
 body:
+  - type: dropdown
+    id: language
+    attributes:
+      label: 🛠️ Lenguaje
+      options:
+        - C
+        - Go
+      default: 0
+    validations:
+      required: true
   - type: textarea
     id: description
     attributes:
